applying lazyfollow to all UI elements, tuning distances for comfort

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,6 @@ crashlytics-build.properties
 /[Aa]ssets/Plugins/Google*
 /[Aa]ssets/Plugins/System*
 /[Aa]ssets/Plugins/Grpc*
+
+/[Aa]ssets/left*
+/[Aa]ssets/right*
