--- a/.gitattributes
+++ b/.gitattributes
@@ -37,6 +37,7 @@
 *.pict filter=lfs diff=lfs merge=lfs -text
 *.dds filter=lfs diff=lfs merge=lfs -text
 *.xcf filter=lfs diff=lfs merge=lfs -text
+*.ico filter=lfs diff=lfs merge=lfs -text
 
 # Audio formats
 *.mp3 filter=lfs diff=lfs merge=lfs -text
