--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@
 /[Aa]ssets/WebSocket*
 /[Aa]ssets/SteamVR*
 /[Aa]ssets/StreamingAssets/SteamVR*
+/[Aa]ssets/StreamingAssets*
 /[Aa]ssets/XR*
 /[Aa]ssets/TextMesh*
 /[Aa]ssets/Oculus*
