--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,24 +1,24 @@
 {
   "dependencies": {
-    "com.pollenrobotics.gstreamerwebrtc": "https://github.com/pollen-robotics/GstreamerWebRTCUnityPlugin.git?path=/UnityProject/Packages/com.pollenrobotics.gstreamerwebrtc#main",
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "4.4.2",
     "com.unity.ai.navigation": "1.1.5",
     "com.unity.analytics": "3.8.1",
-    "com.unity.collab-proxy": "2.6.0",
-    "com.unity.ide.rider": "3.0.34",
+    "com.unity.collab-proxy": "2.7.1",
+    "com.unity.ide.rider": "3.0.35",
     "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.mobile.android-logcat": "1.4.5",
     "com.unity.purchasing": "4.11.0",
-    "com.unity.render-pipelines.universal": "14.0.11",
+    "com.unity.render-pipelines.universal": "14.0.12",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.7",
-    "com.unity.timeline": "1.7.6",
+    "com.unity.timeline": "1.7.7",
     "com.unity.ugui": "1.0.0",
-    "com.unity.xr.interaction.toolkit": "2.6.3",
-    "com.unity.xr.management": "4.5.0",
-    "com.unity.xr.oculus": "4.4.0",
+    "com.unity.xr.interaction.toolkit": "2.6.4",
+    "com.unity.xr.management": "4.5.1",
+    "com.unity.xr.oculus": "4.5.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
